fixed alignment issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,7 @@ h3 {
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-bottom: -30px;
+    margin-bottom: -10px;
 
 }
 
@@ -123,6 +123,12 @@ h3 {
     padding: 20px;
     text-transform: uppercase;
 }
+/*-----------Hero Image------*/
+
+.hero-image {
+   padding: 0; 
+}
+
 
 /*-----------about------*/
 
@@ -165,13 +171,16 @@ h3 {
 
 
 /*-----------Coaches------*/
-
-.coach-img {
+.coach-img  {
     border-radius: 50%;
     padding: 20px;
-    margin: 40px, 20px;
+    margin-left: 22px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border-color: #e1aa12;
     border: solid;
+    width: 250px;
+    height: 250px;
 }
 
 .weight-coach {
@@ -182,12 +191,17 @@ h3 {
 
 .team {
     background-color: #013a67;
-    width: 100%;
-    height: 520px;
+    width: 340px;
+    height: 525px;
     padding: 20px;
-    margin: 15px;
+    margin-left: 45px;
     border: solid;
     border-color: #e1aa12;
     border-radius: 10px;
     color: #e1aa12;
+    display: inline-block;
+}
+
+.coach {
+    background-color: #fafafa;
 }
